# virtualbox-kvm

./: .dir-locals.el  .scm-settings  0003-pci-passthrough-add-VFIO-implementation.patch  0004-virtio-gpu-Add-virtiogpu-implementation.patch  0005-config-switch-to-split-irq-chip-as-default.patch  0006-NEM-rm-redundant-split-irq-definitions.patch  0007-NEM-KVM-disable-KVM-access-to-Hyper-V-MSRs.patch  0009-vmm-rm-unused-pcid-hiding.patch  0011-GIMR3-add-HyperV-PV-on-KVM-implementation.patch  0012-build-use-HyperV-on-KVM-GIM-implementation-when-VBOX.patch  0014-GIMHvOnKvm-reset-HV-MSRs-on-VM-reset.patch  0015-Revert-NEM-KVM-disable-KVM-access-to-Hyper-V-MSRs.patch  0016-GIMHvOnKvm-state-save-resume-handling.patch  0017-GIMHvOnKvm-SynIC-STimer-support.patch  COPYING  COPYING.CDDL  Config.kmk  Doxyfile.Core  Maintenance.kmk  Makefile.kmk  README.GuestAdditionsPackaging  README.intel-sriov-graphics.md  README.md  Version.kmk  configure  configure.vbs
src/VBox/Additions/3D/mesa/mesa-21.3.8/: CODEOWNERS  meson.build  meson_options.txt
src/libs/dxvk-native-1.9.2a/: Makefile.kmk  README.md  VBoxDxVkDeps.cpp  meson.build  meson_options.txt  package-native-steamrt.sh  package-native.sh
src/libs/dxvk-native-1.9.2a/include/native/directx/: README.txt  d3d10.h  d3d10_1.h  d3d10sdklayers.h  d3d11.h  d3d11_1.h  d3d11_2.h  d3d11_3.h  d3d11_4.h  d3d11sdklayers.h  d3dcommon.h  d3dcompiler.h  dxgi.h  dxgi1_2.h  dxgi1_3.h  dxgi1_4.h  dxgi1_5.h  dxgi1_6.h  dxgicommon.h  dxgidebug.h  dxgitype.h  (+1 more)
src/libs/dxvk-native-1.9.2a/src/d3d11/: d3d11_context_imm.cpp  d3d11_context_imm.h  d3d11_device.cpp  d3d11_main.cpp  d3d11_options.cpp  d3d11_shader.cpp  d3d11_swapchain.cpp  d3d11_texture.cpp  meson.build
src/libs/dxvk-native-1.9.2a/src/d3d9/: d3d9_adapter.cpp  d3d9_config.h  d3d9_cursor.cpp  d3d9_device.cpp  d3d9_device.h  d3d9_fixed_function.cpp  d3d9_include.h  d3d9_interface.cpp  d3d9_monitor.cpp  d3d9_multithread.cpp  d3d9_options.cpp  d3d9_shader.cpp  d3d9_surface.cpp  d3d9_swapchain.cpp  d3d9_swapchain.h  d3d9_util.cpp  d3d9_util.h  meson.build
src/libs/dxvk-native-1.9.2a/src/dxgi/: dxgi_adapter.cpp  dxgi_adapter.h  dxgi_include.h  dxgi_main.cpp  dxgi_monitor.cpp  dxgi_monitor.h  dxgi_output.cpp  dxgi_swapchain.cpp  dxgi_swapchain.h  meson.build
src/libs/dxvk-native-1.9.2a/src/dxvk/: dxvk_context.cpp  dxvk_instance.cpp  dxvk_pipemanager.cpp  dxvk_state_cache.cpp  dxvk_state_cache.h  meson.build
src/libs/dxvk-native-1.9.2a/src/util/: meson.build  thread.h  util_env.cpp  util_fps_limiter.cpp  util_monitor.cpp
src/libs/dxvk-native-1.9.2a/src/vulkan/: vulkan_loader.cpp  vulkan_loader.h  vulkan_presenter.cpp  vulkan_presenter_headless.cpp
src/libs/dxvk-native-1.9.2a/src/wsi/: wsi_mode.h  wsi_monitor.h
src/libs/dxvk-native-1.9.2a/tests/: meson.build
src/libs/dxvk-native-1.9.2a/tests/native/: meson.build  test_native_d3d11.cpp  test_native_d3d9.cpp
src/libs/libtpms-0.9.6/: .gitignore  .travis.yml  CHANGES  CREDITS  INSTALL  LICENSE  Makefile.am  Makefile.kmk  README  autogen.sh  bootstrap.sh  configure.ac  libtpms.pc.in
src/libs/libtpms-0.9.6/.github/ISSUE_TEMPLATE/: bug_report.md
src/libs/libtpms-0.9.6/debian/: changelog  clean  control  copyright  libtpms-dev.install  libtpms0.install  rules
src/libs/libtpms-0.9.6/include/: Makefile.am
src/libs/libtpms-0.9.6/include/libtpms/: Makefile.am  tpm_error.h  tpm_library.h  tpm_library.h.in  tpm_memory.h  tpm_nvfilename.h  tpm_tis.h  tpm_types.h
src/libs/libtpms-0.9.6/m4/: ax_check_define.m4  ax_check_linker_flag.m4
src/libs/libtpms-0.9.6/man/: Makefile.am
src/libs/libtpms-0.9.6/man/man3/: Makefile.am  TPMLIB_CancelCommand.pod  TPMLIB_ChooseTPMVersion.pod  TPMLIB_DecodeBlob.pod  TPMLIB_GetInfo.pod  TPMLIB_GetState.3  TPMLIB_GetTPMProperty.pod  TPMLIB_GetVersion.pod  TPMLIB_MainInit.pod  TPMLIB_Process.pod  TPMLIB_RegisterCallbacks.pod  TPMLIB_SetBufferSize.pod  TPMLIB_SetDebugFD.pod  TPMLIB_SetDebugLevel.3  TPMLIB_SetState.pod  TPMLIB_Terminate.3  TPMLIB_ValidateState.pod  TPMLIB_VolatileAll_Store.pod  TPM_Free.3  TPM_IO_Hash_End.3  TPM_IO_Hash_Start.pod  TPM_IO_TpmEstablished_Get.pod  TPM_IO_TpmEstablished_Reset.3  TPM_Malloc.pod  TPM_Realloc.3
src/libs/libtpms-0.9.6/src/: Makefile.am  compiler.h  disabled_interface.c  libtpms.syms  test.syms  tpm_debug.c  tpm_debug.h  tpm_library.c  tpm_library_conf.h  tpm_library_intern.h  tpm_memory.c  tpm_nvfile.c  tpm_nvfile.h  tpm_tpm12_interface.c  tpm_tpm12_tis.c  tpm_tpm2_interface.c  tpm_tpm2_tis.c
src/libs/libtpms-0.9.6/src/tpm12/: tpm_admin.c  tpm_admin.h  tpm_audit.c  tpm_audit.h  tpm_auth.c  tpm_auth.h  tpm_commands.h  tpm_constants.h  tpm_counter.c  tpm_counter.h  tpm_crypto.c  tpm_crypto.h  tpm_crypto_freebl.c  tpm_cryptoh.c  tpm_cryptoh.h  tpm_daa.c  tpm_daa.h  tpm_delegate.c  tpm_delegate.h  tpm_digest.c  tpm_digest.h  tpm_error.c  tpm_global.c  tpm_global.h  tpm_identity.c  tpm_identity.h  tpm_init.c  tpm_init.h  tpm_io.h  tpm_key.c  tpm_key.h  tpm_libtpms_io.c  tpm_load.c  tpm_load.h  tpm_maint.c  tpm_maint.h  tpm_migration.c  tpm_migration.h  tpm_nonce.c  tpm_nonce.h  (+38 more)
src/libs/libtpms-0.9.6/src/tpm2/: ACT.h  ACTCommands.c  ACT_SetTimeout_fp.h  ACT_spt.c  ACT_spt_fp.h  ActivateCredential_fp.h  AlgorithmCap.c  AlgorithmCap_fp.h  AlgorithmTests.c  AlgorithmTests_fp.h  AsymmetricCommands.c  Attest_spt.c  Attest_spt_fp.h  AttestationCommands.c  AuditCommands.c  BackwardsCompatibility.h  BackwardsCompatibilityObject.c  BackwardsCompatibilityObject.h  BaseTypes.h  Bits.c  Bits_fp.h  BnConvert.c  BnMath.c  BnMemory.c  Cancel.c  Capabilities.h  CapabilityCommands.c  CertifyCreation_fp.h  CertifyX509_fp.h  Certify_fp.h  ChangeEPS_fp.h  ChangePPS_fp.h  ClearControl_fp.h  Clear_fp.h  Clock.c  ClockCommands.c  ClockRateAdjust_fp.h  ClockSet_fp.h  CommandAttributeData.h  CommandAttributes.h  (+267 more)
src/libs/libtpms-0.9.6/tests/: Makefile.am  base64decode.c  base64decode.sh  common  freebl_sha1flattensize.c  fuzz-main.c  fuzz.cc  fuzz.sh  nvram_offsets.c  oss-fuzz.sh  run-fuzzer.sh  tpm2_createprimary.c  tpm2_createprimary.sh  tpm2_pcr_read.c  tpm2_pcr_read.sh  tpm2_selftest.c  tpm2_selftest.sh
(+20513 files in other folders)
